--- a/packages/lesswrong/styles/_colors.scss
+++ b/packages/lesswrong/styles/_colors.scss
@@ -1,3 +1,6 @@
+$post-link-green: rgba(100, 142, 105, 1);
+$post-link-hover: rgba(100, 142, 105, .6);
+
 $light-green: #F0F7F1;
 
 $light-yellow: #FFFBDB;
